tests/custom/STARIS_2022/operation-type-errors/defined-type-error/stderr.expected
Error:
    defined-type-error.essence:2:24:
  |
2 | such that b = (defined(1) = defined(1))
  |                        ^
Type error:
	Expected: "Function or Sequence"
	Got: int

defined-type-error.essence:2:37:
  |
2 | such that b = (defined(1) = defined(1))
  |                                     ^
Type error:
	Expected: "Function or Sequence"
	Got: int

